# apriltag

./: .gitignore  AprilTagDetector.cpp  AprilTagDetector.h  CMakeLists.txt  detect_apriltag.cpp  detect_apriltag.go  detect_apriltag.h  detect_apriltag_test.go  detect_apriltags.py  main.cpp  main.cpp_nouse  main.cpp_unused  ndarray_converter.cpp  ndarray_converter.h  test_.py
ethz_apriltag2/: CMakeLists.txt
example/: opencv_demo.cc
